@startuml "State-MCP-Connector-Structure"
title Správná struktura pro přístup k MCP konektoru

class State {
  +messages: List[AnyMessage]
  +company_analysis: Dict[str, Any]
  +company_data: Dict[str, Any]
  +internal_data: Dict[str, Any]
  +relationships_data: Dict[str, List[Dict[str, Any]]]
  +error_state: Dict[str, Any]
  +output: Dict[str, Any]
  +mcp_connector_config: Optional[Any]
  +config: Optional[Any]
  +current_query: Optional[str]
  +analysis_result: Optional[Dict[str, Any]]
  +query_type: Optional[str]
  +get_mcp_connector(): MockMCPConnector
}

class MockMCPConnector {
  +data_path: str
  +get_company_by_name(name: str): Dict
  +get_company_financials(id: str): Dict
  +get_company_relationships(id: str): List
  +get_person_by_name(name: str): Dict
}

class MockMCPConnectorConfig {
  +data_path: str
}

State --> "0..1" MockMCPConnectorConfig : mcp_connector_config
State ..> MockMCPConnector : vytváří přes get_mcp_connector()

note right of State::get_mcp_connector
  Správný přístup:
  mcp_connector = state.get_mcp_connector()
  nebo
  data = state.get_mcp_connector().get_data()
end note

note bottom of State
  **NESPRÁVNÝ PŘÍSTUP** ❌
  state.mcp_connector = MockMCPConnector()
  state.mcp_connector.get_data()
  
  **SPRÁVNÝ PŘÍSTUP** ✅
  data = state.get_mcp_connector().get_data()
end note

@enduml
